Traffic config hinzugefügt

--- a/config-daten/uk_accidents.conf
+++ b/config-daten/uk_accidents.conf
@@ -56,10 +56,10 @@ filter {
 output {
   elasticsearch {
     hosts => "localhost:9200"
-    index => "uk_accidents_geo"
-    document_type => "accident"
+    index => "uk_accidents"
+    document_type => "accidents"
     manage_template => true
-    template => "/Users/danie/Downloads/accidents/elasticsearch-template.json"
+    template => "/Users/danie/Downloads/accidents/elasticsearch_template_accidents.json"
     template_overwrite => "true"
   }
   stdout {}
