Datum und Location geändert

--- a/config-daten/accidents/uk_accidents.conf
+++ b/config-daten/accidents/uk_accidents.conf
@@ -45,9 +45,10 @@ filter {
     }
   }
   mutate {
-    add_field => { "[geo_location][location][lat]" => "%{Latitude}"
-                   "[geo_location][location][lon]" => "%{Longitude}"
+    add_field => { "[geo_location_accidents][location][lat]" => "%{Latitude}"
+                   "[geo_location_accidents][location][lon]" => "%{Longitude}"
                  }
+    add_field => { "[date_accidents]" => "%{Date}"}
   }
   date {
     match => ["Date", "dd/MM/yyyy"]
