--- a/config-daten/traffic/uk_traffic.conf
+++ b/config-daten/traffic/uk_traffic.conf
@@ -42,9 +42,10 @@ filter {
     }
   }
   mutate {
-    add_field => { "[geo_location][location][lat]" => "%{S Ref Latitude}"
-                   "[geo_location][location][lon]" => "%{S Ref Longitude}"
+    add_field => { "[geo_location_traffic][location][lat]" => "%{S Ref Latitude}"
+                   "[geo_location_traffic][location][lon]" => "%{S Ref Longitude}"
                  }
+    add_field => { "[date_traffic]" => "%{dCount}"}
   }
   date {
     match => ["dCount", "dd.MM.yyyy"]
