Fehler behoben und neues Feld

--- a/config-daten/accidents/uk_accidents.conf
+++ b/config-daten/accidents/uk_accidents.conf
@@ -48,7 +48,7 @@ filter {
     add_field => { "[geo_location_accidents][location][lat]" => "%{Latitude}"
                    "[geo_location_accidents][location][lon]" => "%{Longitude}"
                  }
-    add_field => { "[date_accidents]" => "%{Date}"}
+    rename => { "@timestamp" => "date_accidents" }
   }
   date {
     match => ["Date", "dd/MM/yyyy"]
