--- a/config-daten/traffic/uk_traffic.conf
+++ b/config-daten/traffic/uk_traffic.conf
@@ -45,7 +45,7 @@ filter {
     add_field => { "[geo_location_traffic][location][lat]" => "%{S Ref Latitude}"
                    "[geo_location_traffic][location][lon]" => "%{S Ref Longitude}"
                  }
-    add_field => { "[date_traffic]" => "%{dCount}"}
+    rename => { "@timestamp" => "date_traffic" }
   }
   date {
     match => ["dCount", "dd.MM.yyyy"]
