Datum, jetzt aber endlich richtig

--- a/config-daten/traffic/uk_traffic.conf
+++ b/config-daten/traffic/uk_traffic.conf
@@ -45,10 +45,10 @@ filter {
     add_field => { "[geo_location_traffic][location][lat]" => "%{S Ref Latitude}"
                    "[geo_location_traffic][location][lon]" => "%{S Ref Longitude}"
                  }
-    rename => { "@timestamp" => "date_traffic" }
   }
   date {
-    match => ["dCount", "dd.MM.yyyy"]
+    match => [ "dCount", "dd.MM.yyyy" ]
+    target => "dCount"
   }
 }
 output {
