--- a/config-daten/accidents/uk_accidents.conf
+++ b/config-daten/accidents/uk_accidents.conf
@@ -48,10 +48,10 @@ filter {
     add_field => { "[geo_location_accidents][location][lat]" => "%{Latitude}"
                    "[geo_location_accidents][location][lon]" => "%{Longitude}"
                  }
-    rename => { "@timestamp" => "date_accidents" }
   }
   date {
-    match => ["Date", "dd/MM/yyyy"]
+    match => [ "Date", "dd/MM/yyyy" ]
+    target => "Date"
   }
 }
 output {
