Und auf ein neues Time Feld

--- a/config-daten/accidents/uk_accidents.conf
+++ b/config-daten/accidents/uk_accidents.conf
@@ -48,10 +48,15 @@ filter {
     add_field => { "[geo_location_accidents][location][lat]" => "%{Latitude}"
                    "[geo_location_accidents][location][lon]" => "%{Longitude}"
                  }
+    copy => { "Date" => "Time" }
   }
   date {
     match => [ "Date", "dd/MM/yyyy" ]
     target => "Date"
+  }
+  date {
+    match => [ "Time", "dd/MM/yyyy" ]
+    target => "Time"
   }
 }
 output {
