--- a/config-daten/traffic/uk_traffic.conf
+++ b/config-daten/traffic/uk_traffic.conf
@@ -45,10 +45,15 @@ filter {
     add_field => { "[geo_location_traffic][location][lat]" => "%{S Ref Latitude}"
                    "[geo_location_traffic][location][lon]" => "%{S Ref Longitude}"
                  }
+    copy => { "dCount" => "Time" }
   }
   date {
     match => [ "dCount", "dd.MM.yyyy" ]
     target => "dCount"
+  }
+  date {
+    match => [ "Time", "dd.MM.yyyy" ]
+    target => "Time"
   }
 }
 output {
